<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <GridLayout
                android:id="@+id/grid_meeting_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="5"
                android:columnCount="2"
                android:useDefaultMargins="true">
                <!-- Column 0 -->
                <Button
                    android:id="@+id/button_room_1"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_1"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/button_room_2"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_2"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/button_room_3"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_3"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/button_room_4"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_4"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/button_room_5"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_5"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"/>
                <!-- Column 1 -->
                <Button
                    android:id="@+id/button_room_6"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_6"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:id="@+id/button_room_7"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_7"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:id="@+id/button_room_8"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_8"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:id="@+id/button_room_9"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_9"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:id="@+id/button_room_10"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_10"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"/>
            </GridLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>