<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Meeting status icon -->
        <ImageView
            android:id="@+id/img_item_recycler_view"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_lens_light_green_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Meeting name + Room Meeting name -->
        <TextView
            android:id="@+id/title_item_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/title_item_recycler_view"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextItem"
            app:layout_constraintLeft_toRightOf="@id/img_item_recycler_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_item_recycler_view"/>

        <!-- Date Meeting + Hour Meeting -->
        <TextView
            android:id="@+id/text_item_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/text_item_recycler_view"
            android:textSize="15sp"
            android:textColor="@color/colorTextItem"
            app:layout_constraintLeft_toRightOf="@id/img_item_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/title_item_recycler_view"
            app:layout_constraintBottom_toTopOf="@id/subtext_item_recycler_view"/>

        <!-- Meeting participants -->
        <TextView
            android:id="@+id/subtext_item_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/subtext_item_recycler_view"
            android:textColor="@color/colorSubtextItem"
            app:layout_constraintLeft_toRightOf="@id/img_item_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/text_item_recycler_view"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Trash icon -->
    <ImageView
        android:id="@+id/icon_delete_item_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_delete_blue_24dp"/>

</androidx.cardview.widget.CardView>