<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.fragments.AddMeetingFragment">

<!-- Toolbar implementation -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fragment_add_meeting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:titleTextColor="#FFFFFF"
        app:titleTextAppearance="@style/ToolbarTitleStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_add_meeting"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Object Meeting -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_object_meeting"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_help_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_object_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Location -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_room_meeting"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_location_on_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_room_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date & Hour -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="1">

                <!-- Date -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/edit_input_date_meeting"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    app:boxBackgroundColor="#ECECF1"
                    app:boxStrokeColor="#3D73DD"
                    app:startIconTint="#3D73DD"
                    app:startIconDrawable="@drawable/ic_event_blue_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_column="0"
                    android:layout_row="0"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusableInTouchMode="false"
                        android:cursorVisible="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Hour -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:hint="@string/edit_input_hour_meeting"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    app:boxBackgroundColor="#ECECF1"
                    app:boxStrokeColor="#3D73DD"
                    app:startIconTint="#3D73DD"
                    app:startIconDrawable="@drawable/ic_access_time_blue_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_column="1"
                    android:layout_row="0"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:focusableInTouchMode="false"
                        android:cursorVisible="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </GridLayout>

            <!-- List of participants -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_participants_meeting"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"

                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_account_circle_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Informations -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_participants_info"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_information"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:layout_gravity="center"
                android:useDefaultMargins="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp">
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/button_cancel"
                    android:layout_marginEnd="10dp"
                    style="@style/ButtonStyle"/>
                <Button
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/button_ok"
                    android:layout_marginStart="10dp"
                    style="@style/ButtonStyle"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Fragment Container -->
 <!--  <FrameLayout
        android:id="@+id/child_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>