<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.InfoMeetingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Meeting room -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:columnCount="2"
                android:rowCount="1"
                android:useDefaultMargins="true">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/ic_location_on_blue_24dp" />

                <TextView
                    android:id="@+id/text_info_meeting_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_info_meeting_room"
                    android:textSize="22sp" />
            </GridLayout>

            <!-- Date -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:columnCount="2"
                android:rowCount="1"
                android:useDefaultMargins="true">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/ic_today_blue_24dp" />

                <TextView
                    android:id="@+id/text_info_meeting_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_info_meeting_date"
                    android:textSize="22sp" />
            </GridLayout>

            <!-- Hour -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:columnCount="2"
                android:rowCount="1"
                android:useDefaultMargins="true">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/ic_access_time_blue_24dp" />

                <TextView
                    android:id="@+id/text_info_meeting_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_info_meeting_hour"
                    android:textSize="22sp" />
            </GridLayout>

            <!-- List of participants -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Participants">

                <AutoCompleteTextView
                    android:id="@+id/text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>